--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,8 @@
-body {
-    background: papayawhip;
-}
+@import "variables";
+@import "extend";
+@import "banner";
+@import "main";
+@import "navbar-head";
+@import "main-info";
+@import "about-mars";
+@import "footer";
