--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -2,13 +2,19 @@
     background-color: $background-color-two;
     display: grid;
     grid-gap: 2em;
-    // grid-column: 3fr 1fr;
-    // grid-row: 200px 200px;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto auto;
     justify-items: center;
-    padding-bottom: 5em;
-    padding-top: 2.5em;
-    
-    
+    align-items: center;
+    padding: 2.5em 2.5em 5em 2.5em;
+    @media (min-width: 650px){
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    @media (min-width: 1000px){
+       grid-template-columns: 2fr 1fr;
+       grid-row: auto auto auto;
+    }
     &__article {
         width: 80%;
         display: grid;
@@ -21,28 +27,39 @@
         grid-auto-flow: row;
         justify-items: center;
         padding: 1em;
+        grid-gap: 1.5em;
+        @media (min-width: 650px){
+            // width: 100%;
+            grid-template-areas: 
+            "picture space text";
+            grid-column: 200px 50px 1fr;
+            grid-row: auto;
+        }
     }
     &__heading {
         width: 100%;
         text-align: center;
         font-weight: 800;
+        @media (min-width: 1000px){
+        grid-column: span 2;
+        }
     }
     &__picture-wrapper {
         grid-area: picture;
         position: relative;
-        // width: 100%;
+        //width: 100%;
         height: 100%;
+        display: flex;
+        align-items: center;
         &__item {
             width: 150px;
             height: 150px;
-
         }
     }
     &__article-wrapper {
         grid-area: text;
         width: 100%;
     }
-    
 }
 .about-mars__article {
     background: $textandbackground-color-one;
@@ -55,3 +72,34 @@
     color: $background-footer;
     background: $textandbackground-color-one;
 }
+
+    .about-mars__article:nth-of-type(1) {
+        grid-column: 1 / -1;
+        @media (min-width: 1000px){
+        grid-column: 1 / 2;
+        }
+    }
+    .about-mars__article:nth-of-type(2) {
+        grid-column: 1 / -1;
+        @media (min-width: 1000px){
+        grid-row: 3;
+        grid-column: 1 / 2;
+    }
+}
+    .about-mars__article:nth-of-type(3) {
+        grid-column: 1 / -1;
+        @media (min-width: 1000px){
+        grid-row: span 2;
+        grid-column: 2
+      
+    }
+}
+.three {
+    @media (min-width: 1000px){
+    grid-template-areas: 
+    "picture" 
+    "space" 
+    "text";
+    }
+}
+
