--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
     &__text-wrapper{
         padding: 5%;
         &__heading {
@@ -27,5 +28,14 @@
     &__line {
         border: 3px solid $textandbackground-color-one;
     }
-    
+    &__overlay {
+        width: 100%;
+        height: 65%;
+        background: linear-gradient( 182deg, #00132c 61%, rgba(21, 52, 98, 0.9) -13%);
+        opacity: 0.7;   
+        position: absolute;
+        align-self: flex-start;
+        // transform: rotate(12deg);
+
+    }
 }
