--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -1,4 +1,4 @@
-.about-mars{    
+.about-mars {
     background-color: $background-color-two;
     display: grid;
     grid-gap: 2em;
@@ -7,31 +7,30 @@
     justify-items: center;
     align-items: center;
     padding: 2.5em 2.5em 5em 2.5em;
-    @media (min-width: 650px){
+    @media (min-width: 650px) {
         padding-left: 10%;
         padding-right: 10%;
     }
-    @media (min-width: 1000px){
-       grid-template-columns: 2fr 1fr;
-       grid-row: auto auto auto;
+    @media (min-width: 1000px) {
+        grid-template-columns: 2fr 1fr;
+        grid-row: auto auto auto;
     }
     &__article {
         width: 80%;
         display: grid;
-        grid-template-areas: 
-        "picture"
-        "text"
-        "text";
+        grid-template-areas:
+            "picture"
+            "text"
+            "text";
         grid-row: reperat(3, 200px);
         grid-column: auto;
         grid-auto-flow: row;
         justify-items: center;
         padding: 1em;
         grid-gap: 1.5em;
-        @media (min-width: 650px){
+        @media (min-width: 650px) {
             // width: 100%;
-            grid-template-areas: 
-            "picture space text";
+            grid-template-areas: "picture space text";
             grid-column: 200px 50px 1fr;
             grid-row: auto;
         }
@@ -40,8 +39,11 @@
         width: 100%;
         text-align: center;
         font-weight: 800;
-        @media (min-width: 1000px){
-        grid-column: span 2;
+        letter-spacing: 1.33px;
+        font-size: 36px;
+        color: #2c4f80;
+        @media (min-width: 1000px) {
+            grid-column: span 2;
         }
     }
     &__picture-wrapper {
@@ -58,7 +60,11 @@
     }
     &__article-wrapper {
         grid-area: text;
+        @extend %textprops;
         width: 100%;
+        &__heading {
+            @extend %headingprops;
+        }
     }
 }
 .about-mars__article {
@@ -73,33 +79,31 @@
     background: $textandbackground-color-one;
 }
 
-    .about-mars__article:nth-of-type(1) {
-        grid-column: 1 / -1;
-        @media (min-width: 1000px){
+.about-mars__article:nth-of-type(1) {
+    grid-column: 1 / -1;
+    @media (min-width: 1000px) {
         grid-column: 1 / 2;
-        }
     }
-    .about-mars__article:nth-of-type(2) {
-        grid-column: 1 / -1;
-        @media (min-width: 1000px){
+}
+.about-mars__article:nth-of-type(2) {
+    grid-column: 1 / -1;
+    @media (min-width: 1000px) {
         grid-row: 3;
         grid-column: 1 / 2;
     }
 }
-    .about-mars__article:nth-of-type(3) {
-        grid-column: 1 / -1;
-        @media (min-width: 1000px){
+.about-mars__article:nth-of-type(3) {
+    grid-column: 1 / -1;
+    @media (min-width: 1000px) {
         grid-row: span 2;
-        grid-column: 2
-      
+        grid-column: 2;
     }
 }
 .three {
-    @media (min-width: 1000px){
-    grid-template-areas: 
-    "picture" 
-    "space" 
-    "text";
+    @media (min-width: 1000px) {
+        grid-template-areas:
+            "picture"
+            "space"
+            "text";
     }
 }
-
