--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -9,7 +9,7 @@
     justify-content: flex-end;
     align-items: center;
     position: relative;
-    &__text-wrapper{
+    &__text-wrapper {
         padding: 5%;
         &__heading {
             margin-top: 0;
@@ -31,11 +31,14 @@
     &__overlay {
         width: 100%;
         height: 65%;
-        background: linear-gradient( 182deg, #00132c 61%, rgba(21, 52, 98, 0.9) -13%);
-        opacity: 0.7;   
+        background: linear-gradient(
+            182deg,
+            #00132c 61%,
+            rgba(21, 52, 98, 0.9) -13%
+        );
+        opacity: 0.7;
         position: absolute;
         align-self: flex-start;
         // transform: rotate(12deg);
-
     }
 }
