--- a/styles/_extend.scss
+++ b/styles/_extend.scss
@@ -7,3 +7,16 @@
     max-height: 100%;
     position: absolute;
 }
+%textprops {
+    font-weight: 500;
+    line-height: 1.38;
+    letter-spacing: 0.59px;
+    color: $text-color-three;
+}
+%headingprops {
+    font-size: 24px;
+    font-weight: 500;
+    color: $text-color-two;
+    line-height: 0.92;
+    letter-spacing: 0.89px;
+}
