--- a/styles/_facts.scss
+++ b/styles/_facts.scss
@@ -1,31 +1,34 @@
-.facts{    
+.facts {
     background-color: $background-color-two;
     display: grid;
     grid-gap: 2em;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: auto auto;
     justify-items: center;
-    align-items: center;
+    align-items: stretch;
     padding: 2.5em 1em 5em 1em;
-    @media (min-width: 650px){
+    min-height: 100vh;
+    @media (min-width: 650px) {
         padding-left: 10%;
         padding-right: 10%;
     }
-    @media (min-width: 1000px){
-       grid-template-columns: 1fr 2fr;
-       grid-row: auto auto auto;
+    @media (min-width: 1000px) {
+        grid-template-columns: 1fr 2fr;
+        grid-row: auto auto auto;
     }
 
     &__heading {
         width: 100%;
         text-align: center;
         font-weight: 800;
+        letter-spacing: 1.33px;
+        font-size: 36px;
+        color: #2c4f80;
         // @media (min-width: 1000px){
         grid-column: span 2;
         // }
     }
-    }
-    
+}
 
 .facts-article__todo__picture-wrapper {
     position: relative;
@@ -38,27 +41,65 @@
     @extend %picturepoperties;
 }
 
- .facts-article__live-on-mars {
+.facts-article__live-on-mars {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
-        @media (min-width: 1000px){
+    @media (min-width: 1000px) {
         grid-column: 1 / 2;
-    }  
- }
+        grid-row: 2 / 4;
+        padding: 2em;
+    }
+    &__heading {
+        @extend %headingprops;
+    }
+    &__text {
+        @extend %textprops;
+    }
+}
 .facts-article__risks {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
-    @media (min-width: 1000px){
-        grid-row: span 2;
-        grid-column: 2
-        }
+    @media (min-width: 1000px) {
+        grid-row: 2;
+        grid-column: 2;
+        padding: 2em;
+    }
+    &__heading {
+        @extend %headingprops;
+    }
+    &__text {
+        @extend %textprops;
+    }
+    &__list {
+        @extend %textprops;
+    }
 }
 .facts-article__todo {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
-    @media (min-width: 1000px){
+    display: flex;
+    flex-direction: column;
+    min-height: 400px;
+    @media (min-width: 1000px) {
         grid-row: 3;
-        grid-column: 1 / 2;
+        grid-column: 2;
+        display: flex;
+        flex-direction: row;
+        min-height: 500px;
+    }
+    &__wrapper {
+        @media (min-width: 1000px) {
+            padding: 2em;
+            padding-right: 0;
+            align-self: center;
+        }
+    }
+    &__heading {
+        padding-right: 3vw;
+        @extend %headingprops;
+    }
+    &__text {
+        padding-right: 5vw;
+        @extend %textprops;
     }
 }
-
