--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,21 @@
   position: absolute;
 }
 
+.mars-one__info__text, .about-mars__article-wrapper, .facts-article__live-on-mars__text, .facts-article__risks__text, .facts-article__risks__list, .facts-article__todo__text, .far-travel-article__text {
+  font-weight: 500;
+  line-height: 1.38;
+  letter-spacing: 0.59px;
+  color: #323232;
+}
+
+.about-mars__article-wrapper__heading, .facts-article__live-on-mars__heading, .facts-article__risks__heading, .facts-article__todo__heading, .far-travel-article__heading {
+  font-size: 24px;
+  font-weight: 500;
+  color: #e32700;
+  line-height: 0.92;
+  letter-spacing: 0.89px;
+}
+
 .banner {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -64,7 +79,7 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .navbar-head {
@@ -201,12 +216,6 @@ body {
   }
 }
 
-.mars-one__info__text {
-  font-size: 16px;
-  letter-spacing: 0.67px;
-  line-height: 1.44;
-}
-
 .mars-one__info__text--bolder {
   color: #e32700;
 }
@@ -301,6 +310,9 @@ body {
   width: 100%;
   text-align: center;
   font-weight: 800;
+  letter-spacing: 1.33px;
+  font-size: 36px;
+  color: #2c4f80;
 }
 
 @media (min-width: 1000px) {
@@ -389,7 +401,7 @@ body {
 
 @media (min-width: 1000px) {
   .three {
-        grid-template-areas: "picture"  "space"  "text";
+        grid-template-areas: "picture" "space" "text";
   }
 }
 
@@ -400,7 +412,7 @@ body {
   padding-top: 5em;
   padding-bottom: 5em;
   color: #ffffff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .footer__heading {
@@ -416,6 +428,7 @@ body {
 
 .footer__strong {
   color: #ff694a;
+  font-weight: bold;
 }
 
 .banner-faq {
@@ -481,10 +494,11 @@ body {
   -ms-grid-rows: auto auto;
       grid-template-rows: auto auto;
   justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   padding: 2.5em 1em 5em 1em;
+  min-height: 100vh;
 }
 
 @media (min-width: 650px) {
@@ -506,6 +520,9 @@ body {
   width: 100%;
   text-align: center;
   font-weight: 800;
+  letter-spacing: 1.33px;
+  font-size: 36px;
+  color: #2c4f80;
   grid-column: span 2;
 }
 
@@ -531,6 +548,10 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2 / 4;
+    padding: 2em;
   }
 }
 
@@ -541,24 +562,111 @@ body {
 
 @media (min-width: 1000px) {
   .facts-article__risks {
-    grid-row: span 2;
+    -ms-grid-row: 2;
+    grid-row: 2;
     -ms-grid-column: 2;
     grid-column: 2;
+    padding: 2em;
   }
 }
 
 .facts-article__todo {
   background: #ffffff;
   grid-column: 1 / -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 400px;
 }
 
 @media (min-width: 1000px) {
   .facts-article__todo {
     -ms-grid-row: 3;
     grid-row: 3;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
+    -ms-grid-column: 2;
+    grid-column: 2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    min-height: 500px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .facts-article__todo__wrapper {
+    padding: 2em;
+    padding-right: 0;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
+.facts-article__todo__heading {
+  padding-right: 3vw;
+}
+
+.facts-article__todo__text {
+  padding-right: 5vw;
+}
+
+.far-travel-article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (min-width: 1000px) {
+  .far-travel-article {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.far-travel-article__picture-wrapper {
+  width: 462px;
+  height: 462px;
+  background-image: radial-gradient(circle at 50% 39%, #072142, #00132c 101%);
+}
+
+@media (min-width: 1000px) {
+  .far-travel-article__picture-wrapper {
+    margin-right: 10%;
+  }
+}
+
+.far-travel-article__wrapper {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+@media (min-width: 1000px) {
+  .far-travel-article__wrapper {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .far-travel-article__text {
+    padding-right: 10%;
   }
 }
 /*# sourceMappingURL=style.css.map */
