Börjat på sida tre.

--- a/styles/_extend.scss
+++ b/styles/_extend.scss
@@ -17,6 +17,11 @@
     font-size: 24px;
     font-weight: 500;
     color: $text-color-two;
-    line-height: 0.92;
     letter-spacing: 0.89px;
+}
+%joinlabels {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.52px;
+    color: #2c4f80;
 }
