--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,4 +8,7 @@
 @import "footer";
 @import "banner-faq";
 @import "facts";
-@import "far-travel"
+@import "far-travel";
+@import "banner-contact";
+@import "join";
+@import "input";
