--- a/styles/_input.scss
+++ b/styles/_input.scss
@@ -1,39 +1,98 @@
-.input {
+.join-in {
+    background: $background-color-two;
+    padding: 5% 10% 5% 10%;
     display: grid;
-    width: 80%;
-    grid-gap: 2em;
-    grid-template-areas:
-        "fistname lastname birthdate"
-        "profession primeskill empty"
-        "motivation motivation motivation";
-    grid-template-columns: 2fr 2fr 1fr;
-    &__box__fistname {
-        grid-area: fistname;
+    justify-content: center;
+    grid-template-columns: 1fr;
+    @media (min-width: 1000px) {
+        grid-auto-columns: 1fr 1fr 1fr;
     }
-    &__box__lastname {
-        grid-area: lastname;
-    }
-    &__box__birthdate {
-        grid-area: birthdate;
-    }
-    &__box__profession {
-        grid-area: profession;
-    }
-    &__box__primeskill {
-        grid-area: primeskill;
-    }
-    &__motivation {
-        grid-area: motivation;
-        &__message {
-            width: 100%;
+
+    &__heading-wrapper {
+        @media (min-width: 1000px) {
+            grid-column: 2;
         }
     }
-    &__box {
+}
+.input {
+    grid-column: span 3;
+    background: $textandbackground-color-one;
+    display: grid;
+    grid-gap: 1em;
+    padding: 10%;
+    // grid-auto-flow: row;
+    // @media (min-width: 450px) {
+    //     grid-template-columns: 1fr 1fr;
+    // }
+    @media (min-width: 920px) {
+        grid-gap: 2em;
+        // grid-template-areas:
+        //     "fistname lastname birthdate"
+        //     "profession primeskill empty"
+        //     "motivation motivation motivation";
+        grid-template-columns: 2fr 2fr 1fr;
+    }
+    // &__box__fistname {
+    //     @media (min-width: 450px) {
+    //     }
+    //     @media (min-width: 920px) {
+    //         grid-area: fistname;
+    //     }
+    // }
+    // &__box__lastname {
+    //     @media (min-width: 450px) {
+    //     }
+    //     @media (min-width: 920px) {
+    //         grid-area: lastname;
+    //     }
+    // }
+    &__box__birthdate {
+        @media (min-width: 450px) {
+            grid-column: span 2;
+        }
+        @media (min-width: 920px) {
+            grid-column: span 1;
+        }
+    }
+    // &__box__profession {
+    //     @media (min-width: 450px) {
+    //     }
+    //     @media (min-width: 920px) {
+    //         grid-area: profession;
+    //     }
+    // }
+    // &__box__primeskill {
+    //     @media (min-width: 450px) {
+    //     }
+    //     @media (min-width: 920px) {
+    //         grid-area: primeskill;
+    //     }
+    // }
+    // &__motivation {
+    //     @media (min-width: 450px) {
+    //     }
+    //     @media (min-width: 920px) {
+    //         grid-area: motivation;
+    //     }
+
+    &__message {
         width: 100%;
-        border-radius: 5px;
         border: solid 1px #2c4f80;
     }
 }
+&__box {
+    width: 100%;
+    border-radius: 5px;
+    border: solid 1px #2c4f80;
+}
+&__submit__button {
+    color: #2c4f80;
+    width: 128px;
+    height: 38px;
+    border-radius: 10px;
+    border: solid 1px #2c4f80;
+}
+
 label {
     @extend %joinlabels;
 }
