--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -15,8 +15,12 @@
         grid-template-columns: 2fr 1fr;
         grid-row: auto auto auto;
     }
+    @media (min-width: 1400px) {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
     &__article {
-        width: 80%;
+        // width: 80%;
         display: grid;
         grid-template-areas:
             "picture"
@@ -39,11 +43,12 @@
         width: 100%;
         text-align: center;
         font-weight: 800;
-        font-size: 36px;
+        font-size: 30px;
         color: #2c4f80;
-        @media (min-width: 1000px) {
-            grid-column: span 2;
-        }
+        grid-column: span 2;
+        // @media (min-width: 1000px) {
+        //     grid-column: span 2;
+        // }
     }
     &__picture-wrapper {
         grid-area: picture;
@@ -53,8 +58,8 @@
         display: flex;
         align-items: center;
         &__item {
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
         }
     }
     &__article-wrapper {
@@ -72,8 +77,8 @@
 .read-more {
     border-radius: 10px;
     border: solid 1px $background-footer;
-    width: 128px;
-    height: 38px;
+    width: 130px;
+    height: 40px;
     color: $background-footer;
     background: $textandbackground-color-one;
 }
@@ -94,6 +99,9 @@
 .about-mars__article:nth-of-type(3) {
     grid-column: 1 / -1;
     @media (min-width: 1000px) {
+        padding-top: 0;
+        padding-bottom: 0;
+        height: 100%;
         grid-row: span 2;
         grid-column: 2;
     }
