--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -29,13 +29,10 @@
         border: 3px solid $textandbackground-color-one;
     }
     &__overlay {
-        width: 100%;
-        height: 65%;
-        background: linear-gradient(
-            182deg,
-            #00132c 61%,
-            rgba(21, 52, 98, 0.9) -13%
-        );
+        background: blue;
+        border: lightblue;
+        clip-path: circle(50% at 50% 0%);
+        z-index: 1;
         opacity: 0.7;
         position: absolute;
         align-self: flex-start;
