--- a/styles/_facts.scss
+++ b/styles/_facts.scss
@@ -8,6 +8,8 @@
     align-items: stretch;
     padding: 2.5em 1em 5em 1em;
     min-height: 100vh;
+    padding-left: 5%;
+    padding-right: 5%;
     @media (min-width: 650px) {
         padding-left: 10%;
         padding-right: 10%;
@@ -34,16 +36,20 @@
     position: relative;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
+    min-height: 50%;
+    // display: flex;
 }
 .facts-article__todo__img-item {
     @extend %picturepoperties;
+    @media (min-width: 1000px) {
+        position: absolute;
+    }
 }
 
 .facts-article__live-on-mars {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
+    padding: 1em;
     @media (min-width: 1000px) {
         grid-column: 1 / 2;
         grid-row: 2 / 4;
@@ -59,6 +65,7 @@
 .facts-article__risks {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
+    padding: 1em;
     @media (min-width: 1000px) {
         grid-row: 2;
         grid-column: 2;
@@ -80,12 +87,16 @@
     display: flex;
     flex-direction: column;
     min-height: 400px;
+    padding: 1em;
     @media (min-width: 1000px) {
         grid-row: 3;
         grid-column: 2;
-        display: flex;
-        flex-direction: row;
         min-height: 400px;
+        padding: 0;
+    }
+    @media (min-width: 1500px) {
+        display: flex;
+        flex-direction: row-reverse;
     }
     &__wrapper {
         @media (min-width: 1000px) {
