--- a/styles/_far-travel.scss
+++ b/styles/_far-travel.scss
@@ -1,30 +1,45 @@
 .far-travel-article {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-end;
+    justify-content: center;
     flex-wrap: wrap;
-    @media (min-width: 1000px) {
+
+    @media (min-width: 710px) {
         flex-wrap: nowrap;
+        justify-content: flex-end;
+        padding: 0em;
     }
     &__picture-wrapper {
-        width: 462px;
-        height: 462px;
+        width: 100%;
+        // width: 462px;
+        min-height: 462px;
         background-image: radial-gradient(
             circle at 50% 39%,
             #072142,
             #00132c 101%
         );
+
+        @media (min-width: 710px) {
+            margin-right: 5%;
+            flex-basis: 40%;
+        }
         @media (min-width: 1000px) {
             margin-right: 10%;
+            width: 40%;
         }
     }
     &__wrapper {
+        padding: 1.2em;
         align-self: center;
+        @media (min-width: 710px) {
+            width: 50%;
+        }
         @media (min-width: 1000px) {
             width: 70%;
         }
     }
     &__text {
+        padding-right: 7%;
         @extend %textprops;
         @media (min-width: 1000px) {
             padding-right: 10%;
