--- a/styles/_input2.scss
+++ b/styles/_input2.scss
@@ -1,19 +1,20 @@
 .join-in {
     background: $background-color-two;
     padding: 5% 10% 5% 10%;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 1fr;
-    @media (min-width: 1000px) {
-        grid-auto-columns: 1fr 1fr 1fr;
-    }
-
-    &__heading-wrapper {
-        @media (min-width: 1000px) {
-            grid-column: span 2;
-        }
-    }
 }
+//     display: grid;
+//     justify-content: center;
+//     grid-template-columns: 1fr;
+//     @media (min-width: 1000px) {
+//         grid-auto-columns: 1fr 1fr 1fr;
+//     }
+
+//     &__heading-wrapper {
+//         @media (min-width: 1000px) {
+//             grid-column: span 2;
+//         }
+//     }
+// }
 .input {
     display: grid;
     background: $textandbackground-color-one;
@@ -21,7 +22,7 @@
     grid-gap: 1em;
     grid-column: span 2;
     grid-auto-flow: row;
-    @media (min-width: 450px) {
+    @media (min-width: 600px) {
         grid-template-columns: 1fr 1fr;
     }
     @media (min-width: 1000px) {
@@ -40,10 +41,11 @@
         height: 38px;
         border-radius: 10px;
         border: solid 1px #2c4f80;
+        background: $textandbackground-color-one;
     }
     &__box__birthdate {
         width: 100%;
-        @media (min-width: 450px) {
+        @media (min-width: 600px) {
             grid-column: span 2;
             width: 40%;
         }
@@ -54,8 +56,6 @@
     }
     &__motivation {
         grid-column: 1 / -1;
-        @media (min-width: 450px) {
-        }
         &__message {
             width: 100%;
             height: 200px;
