--- a/styles/_join.scss
+++ b/styles/_join.scss
@@ -1,22 +1,37 @@
 .join-in__heading-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
     text-align: center;
+    margin-bottom: 2em;
     &__head {
         font-weight: 800;
-        font-size: 31px;
+        font-size: 28px;
         color: $text-color-two;
-        letter-spacing: 1.33px;
+        letter-spacing: 1.4px;
+        margin-bottom: 0;
         @media (min-width: 800px) {
+            width: 100%;
             font-size: 36px;
             padding-left: 1em;
         }
     }
     &__text {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 500;
-        letter-spacing: 0.89px;
+        letter-spacing: 1px;
         text-align: center;
         color: #2c4f80;
-        width: 30;
+        @media (min-width: 800px) {
+            width: 60%;
+            font-size: 24px;
+        }
+        @media (min-width: 1000px) {
+            width: 50%;
+        }
+        @media (min-width: 1400px) {
+            width: 40%;
+        }
     }
 }
