--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,12 @@
   width: 100%;
   max-width: 100%;
   max-height: 100%;
-  position: absolute;
 }
 
 .mars-one__info__text, .about-mars__article-wrapper, .facts-article__live-on-mars__text, .facts-article__risks__text, .facts-article__risks__list, .facts-article__todo__text, .far-travel-article__text {
   font-weight: 500;
   line-height: 1.4;
-  letter-spacing: 0.59px;
+  letter-spacing: 1px;
   color: #323232;
 }
 
@@ -26,7 +25,7 @@
 label {
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: 0.52px;
+  letter-spacing: 1px;
   color: #2c4f80;
 }
 
@@ -74,9 +73,11 @@ label {
 }
 
 .banner__overlay {
-  width: 100%;
-  height: 65%;
-  background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9) -13%);
+  background: blue;
+  border: lightblue;
+  -webkit-clip-path: circle(50% at 50% 0%);
+          clip-path: circle(50% at 50% 0%);
+  z-index: 1;
   opacity: 0.7;
   position: absolute;
   -ms-flex-item-align: start;
@@ -107,13 +108,24 @@ body {
   margin-top: 0;
 }
 
-.navbar-head__list {
+.navbar-head__list-container {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+@media (min-width: 500px) {
+  .navbar-head__list-container {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+.navbar-head__list {
   display: contents;
   list-style: none;
 }
@@ -212,7 +224,7 @@ body {
   font-weight: 800;
   font-size: 31px;
   color: #e32700;
-  letter-spacing: 1.33px;
+  letter-spacing: 1.4px;
 }
 
 @media (min-width: 800px) {
@@ -291,8 +303,14 @@ body {
   }
 }
 
+@media (min-width: 1400px) {
+  .about-mars {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+}
+
 .about-mars__article {
-  width: 80%;
   display: -ms-grid;
   display: grid;
       grid-template-areas: "picture" "text" "text";
@@ -316,14 +334,9 @@ body {
   width: 100%;
   text-align: center;
   font-weight: 800;
-  font-size: 36px;
+  font-size: 30px;
   color: #2c4f80;
-}
-
-@media (min-width: 1000px) {
-  .about-mars__heading {
-    grid-column: span 2;
-  }
+  grid-column: span 2;
 }
 
 .about-mars__picture-wrapper {
@@ -341,8 +354,8 @@ body {
 }
 
 .about-mars__picture-wrapper__item {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
 }
 
 .about-mars__article-wrapper {
@@ -360,8 +373,8 @@ body {
 .read-more {
   border-radius: 10px;
   border: solid 1px #2c4f80;
-  width: 128px;
-  height: 38px;
+  width: 130px;
+  height: 40px;
   color: #2c4f80;
   background: #ffffff;
 }
@@ -398,6 +411,9 @@ body {
 
 @media (min-width: 1000px) {
   .about-mars__article:nth-of-type(3) {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 100%;
     grid-row: span 2;
     -ms-grid-column: 2;
     grid-column: 2;
@@ -504,6 +520,8 @@ body {
           align-items: stretch;
   padding: 2.5em 1em 5em 1em;
   min-height: 100vh;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 @media (min-width: 650px) {
@@ -535,17 +553,19 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  min-height: 50%;
+}
+
+@media (min-width: 1000px) {
+  .facts-article__todo__img-item {
+    position: absolute;
+  }
 }
 
 .facts-article__live-on-mars {
   background: #ffffff;
   grid-column: 1 / -1;
+  padding: 1em;
 }
 
 @media (min-width: 1000px) {
@@ -563,6 +583,7 @@ body {
 .facts-article__risks {
   background: #ffffff;
   grid-column: 1 / -1;
+  padding: 1em;
 }
 
 @media (min-width: 1000px) {
@@ -586,6 +607,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 400px;
+  padding: 1em;
 }
 
 @media (min-width: 1000px) {
@@ -594,14 +616,20 @@ body {
     grid-row: 3;
     -ms-grid-column: 2;
     grid-column: 2;
+    min-height: 400px;
+    padding: 0;
+  }
+}
+
+@media (min-width: 1500px) {
+  .facts-article__todo {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    min-height: 400px;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
 }
 
@@ -637,42 +665,66 @@ body {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 710px) {
   .far-travel-article {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    padding: 0em;
   }
 }
 
 .far-travel-article__picture-wrapper {
-  width: 462px;
-  height: 462px;
+  width: 100%;
+  min-height: 462px;
   background-image: radial-gradient(circle at 50% 39%, #072142, #00132c 101%);
+}
+
+@media (min-width: 710px) {
+  .far-travel-article__picture-wrapper {
+    margin-right: 5%;
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+  }
 }
 
 @media (min-width: 1000px) {
   .far-travel-article__picture-wrapper {
     margin-right: 10%;
+    width: 40%;
   }
 }
 
 .far-travel-article__wrapper {
+  padding: 1.2em;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+@media (min-width: 710px) {
+  .far-travel-article__wrapper {
+    width: 50%;
+  }
 }
 
 @media (min-width: 1000px) {
   .far-travel-article__wrapper {
     width: 70%;
   }
+}
+
+.far-travel-article__text {
+  padding-right: 7%;
 }
 
 @media (min-width: 1000px) {
@@ -725,55 +777,65 @@ body {
 }
 
 .join-in__heading-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   text-align: center;
+  margin-bottom: 2em;
 }
 
 .join-in__heading-wrapper__head {
   font-weight: 800;
-  font-size: 31px;
+  font-size: 28px;
   color: #e32700;
-  letter-spacing: 1.33px;
+  letter-spacing: 1.4px;
+  margin-bottom: 0;
 }
 
 @media (min-width: 800px) {
   .join-in__heading-wrapper__head {
+    width: 100%;
     font-size: 36px;
     padding-left: 1em;
   }
 }
 
 .join-in__heading-wrapper__text {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 500;
-  letter-spacing: 0.89px;
+  letter-spacing: 1px;
   text-align: center;
   color: #2c4f80;
-  width: 30;
+}
+
+@media (min-width: 800px) {
+  .join-in__heading-wrapper__text {
+    width: 60%;
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .join-in__heading-wrapper__text {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .join-in__heading-wrapper__text {
+    width: 40%;
+  }
 }
 
 .join-in {
   background: #f1f1f1;
   padding: 5% 10% 5% 10%;
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-}
-
-@media (min-width: 1000px) {
-  .join-in {
-    grid-auto-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (min-width: 1000px) {
-  .join-in__heading-wrapper {
-    grid-column: span 2;
-  }
 }
 
 .input {
@@ -786,7 +848,7 @@ body {
   grid-auto-flow: row;
 }
 
-@media (min-width: 450px) {
+@media (min-width: 600px) {
   .input {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -814,13 +876,14 @@ body {
   height: 38px;
   border-radius: 10px;
   border: solid 1px #2c4f80;
+  background: #ffffff;
 }
 
 .input__box__birthdate {
   width: 100%;
 }
 
-@media (min-width: 450px) {
+@media (min-width: 600px) {
   .input__box__birthdate {
     grid-column: span 2;
     width: 40%;
