lite små ändringar

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -12,9 +12,11 @@
         margin-top: 0;
         font-size: 30px;
         letter-spacing: 1.11px;
+        margin-bottom: 0;
     }
     &__text {
         margin-bottom: 0;
+        padding: 1em;
     }
     &__strong {
         color: lighten($text-color-two, 20%);
