--- a/styles/_facts.scss
+++ b/styles/_facts.scss
@@ -86,8 +86,7 @@
     grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
-    min-height: 400px;
-    padding: 1em;
+    min-height: min-content;
     @media (min-width: 1000px) {
         grid-row: 3;
         grid-column: 2;
