--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -1,4 +1,5 @@
 .about-mars {
+    max-width: 1500px;
     background-color: $background-color-two;
     display: grid;
     grid-gap: 2em;
@@ -32,6 +33,25 @@
         justify-items: center;
         padding: 1em;
         grid-gap: 1.5em;
+        &-two {
+            display: grid;
+            grid-template-areas:
+                "picture"
+                "text"
+                "text";
+            grid-row: reperat(3, 200px);
+            grid-column: auto;
+            grid-auto-flow: row;
+            justify-items: center;
+            padding: 0;
+            grid-gap: 1.5em;
+            @media (min-width: 650px) {
+                // width: 100%;
+                grid-template-areas: "picture space text";
+                grid-column: 200px 50px 1fr;
+                grid-row: auto;
+            }
+        }
         @media (min-width: 650px) {
             // width: 100%;
             grid-template-areas: "picture space text";
@@ -60,6 +80,17 @@
         &__item {
             width: 200px;
             height: 200px;
+            &-two {
+               @extend %picturepoperties;
+            }
+        }
+        &-two {
+        grid-area: picture;
+        position: relative;
+        //width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
         }
     }
     &__article-wrapper {
@@ -73,6 +104,9 @@
 }
 .about-mars__article {
     background: $textandbackground-color-one;
+    &-two {
+        background: $textandbackground-color-one;
+    }
 }
 .read-more {
     border-radius: 10px;
@@ -89,7 +123,7 @@
         grid-column: 1 / 2;
     }
 }
-.about-mars__article:nth-of-type(2) {
+.about-mars__article-two {
     grid-column: 1 / -1;
     @media (min-width: 1000px) {
         grid-row: 3;
