--- a/styles/_facts.scss
+++ b/styles/_facts.scss
@@ -11,12 +11,15 @@
     padding-left: 5%;
     padding-right: 5%;
     @media (min-width: 650px) {
-        padding-left: 10%;
-        padding-right: 10%;
+        padding-left: 0;
+        padding-right: 0;
     }
     @media (min-width: 1000px) {
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 1fr 1fr;
         grid-row: auto auto auto;
+    }
+    @media (min-width: 1300px) {
+        grid-template-columns: 1fr 2fr;
     }
 
     &__heading {
@@ -36,7 +39,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 50%;
+    min-height: 250px
     // display: flex;
 }
 .facts-article__todo__img-item {
@@ -93,7 +96,7 @@
         min-height: 400px;
         padding: 0;
     }
-    @media (min-width: 1500px) {
+    @media (min-width: 1300px) {
         display: flex;
         flex-direction: row-reverse;
     }
